# devbox

./: .gitignore  PLAN-cli-lambda.md  README.md  extra-notes.md  launch.py  main.tf  outputs.tf  pyproject.toml  testplan.md  variables.tf
.github/workflows/: ci.yml
lambdas/: Dockerfile  build-and-push.sh  cli_lambda.Dockerfile  dns_cleanup.py  snapshot_lambda.py  test_dns_cleanup_lambda.py
modules/cli-lambda/: main.tf  outputs.tf  variables.tf
modules/config/: main.tf  outputs.tf  variables.tf
modules/devbox/: main.tf  outputs.tf  variables.tf
modules/dns-cleanup-lambda/: main.tf  outputs.tf  variables.tf
modules/snapshot-lambda/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
src/devbox/: __init__.py  cli.py  cli_protocol.py  console_output.py  devbox_manager.py  dns.py  launch.py  new.py  remote_client.py  utils.py
src/devbox/cli_lambda/: __init__.py  app.py  contracts.py  status.py
src/devbox/commands/: __init__.py  status.py
src/devbox/lambdas/: dns_cleanup.py
src/devbox/lifecycle/: __init__.py  dns.py  snapshots.py
tests/: conftest.py  test_cli.py  test_console_output.py  test_devbox_manager.py  test_dns.py  test_dns_cleanup.py  test_launch.py  test_launch_dns.py  test_new.py  test_remote_client.py  test_utils.py  utils.py
tests/cli_lambda/: test_app.py  test_contracts.py  test_status.py
tests/commands/: test_status.py
tests/lifecycle/: test_snapshots.py
