[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbox"
version = "0.1.0"
description = "DevBox management tool for AWS EC2 instances"
authors = [
    {name = "David W.H. Swenson", email = "dwhs@hyperblazer.net"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.26.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "moto>=4.0.0",
    "mypy-boto3-ec2>=1.26.0",
    "mypy-boto3-dynamodb>=1.26.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]

[project.scripts]
devbox = "devbox.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["devbox", "devbox.lifecycle", "devbox.lambdas"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

#[project.urls]
#"Homepage" = "https://github.com/omsf/devbox"
#"Bug Tracker" = "https://github.com/omsf/devbox/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
devbox = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
