[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devbox"
version = "0.1.0"
description = "DevBox management tool for AWS EC2 instances"
authors = [
    {name = "David W.H. Swenson", email = "dwhs@hyperblazer.net"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.26.0",
    "click>=8.0.0",
    "cloudflare>=4.3.1",
    "requests>=2.31.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
cli_lambda = [
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "moto>=4.0.0",
    "mypy-boto3-ec2>=1.26.0",
    "mypy-boto3-dynamodb>=1.26.0",
    "responses>=0.25.0",
    "ruff>=0.1.0",
    "starlette>=0.37.0",
    "ty>=0.0.1",
    "uvicorn>=0.30.0",
]

[project.scripts]
devbox = "devbox.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["devbox", "devbox.cli_lambda", "devbox.lifecycle"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "lambdas"]
python_files = ["test_*.py"]
addopts = "-v"

#[project.urls]
#"Homepage" = "https://github.com/omsf/devbox"
#"Bug Tracker" = "https://github.com/omsf/devbox/issues"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
devbox = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
